--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="./index.css">
+    <title>Menu Card</title>
 </head>
 <body>
     <div id="fixedheader">
@@ -17,10 +18,10 @@
             </div>
     
             <div class="navbar collapse " id="myMenu">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a href="#chicken" class="nav-link"> chicken</a></li>
-                    <li class="nav-item"><a href="#beef" class="nav-link"> Menu</a></li>
-                    <li class="nav-item"><a href="#sushi" class="nav-link"> Contact Us</a></li>
+                <ul class="navbar-nav mr-auto" id="dar">
+                    <li class="nav-item"><a href="#chicken" class="nav-link"> <strong>Chicken</strong></a></li>
+                    <li class="nav-item"><a href="#beef" class="nav-link"><strong> Beef</strong></a></li>
+                    <li class="nav-item"><a href="#sushi" class="nav-link"> <strong>Sushi</strong></a></li>
                 </ul>
             </div>
         </nav>
