--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </ol>
             </div>
             <div id="menu">
-                    <button type="button" class="bnt">Beef</button>
+                    <button type="button" class="bnt"  id="beef">Beef</button>
                     <ol>
                     
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, porro aut accusantium blanditiis dolores consequuntur fugiat aliquid optio assumenda dolore inventore, consequatur dolorum quibusdam nostrum beatae vel eius illo labore!
@@ -56,7 +56,7 @@
                     </ol>
             </div>
             <div id="menu">
-                    <button type="button" class="bnt">Sushi</button>
+                    <button type="button" class="bnt" id="sushi">Sushi</button>
                     <ol>
                     
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, porro aut accusantium blanditiis dolores consequuntur fugiat aliquid optio assumenda dolore inventore, consequatur dolorum quibusdam nostrum beatae vel eius illo labore!
